--- a/framework/framework.vcxproj
+++ b/framework/framework.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="cubeMesh.h" />
     <ClInclude Include="knotMesh.h" />
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="nonCopyable.h" />
     <ClInclude Include="planeMesh.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="timer.h" />
