--- a/14-particles/14-particles.vcxproj.filters
+++ b/14-particles/14-particles.vcxproj.filters
@@ -32,4 +32,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="particleNeg.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
