Enable warning level 4, but disable specific CL warnings: 4100, 4146, 4305, 4324, 4458, 4838.

--- a/08-cubemap/08-cubemap.vcxproj.filters
+++ b/08-cubemap/08-cubemap.vcxproj.filters
@@ -15,6 +15,7 @@
     <CustomBuild Include="transform.vert">
       <Filter>Resource Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="envmap.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="diff.dds">
@@ -28,10 +29,5 @@
     <ClCompile Include="08-cubemap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="envmap.frag">
-      <Filter>Resource Files</Filter>
-    </None>
   </ItemGroup>
 </Project>
