--- a/14-particles/14-particles.vcxproj.filters
+++ b/14-particles/14-particles.vcxproj.filters
@@ -26,7 +26,9 @@
     <CustomBuild Include="pointSize.vert">
       <Filter>Resource Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="particleNeg.frag" />
+    <CustomBuild Include="particleNeg.frag">
+      <Filter>Resource Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="particlesystem.h">
