PlainMesh and CubeMesh objects are placed into shapeMesh.h/cpp

--- a/framework/framework.vcxproj
+++ b/framework/framework.vcxproj
@@ -159,12 +159,11 @@
     <ClInclude Include="alignedAllocator.h" />
     <ClInclude Include="application.h" />
     <ClInclude Include="bezierMesh.h" />
+    <ClInclude Include="shapeMesh.h" />
     <ClInclude Include="spirvShaderFile.h" />
-    <ClInclude Include="cubeMesh.h" />
     <ClInclude Include="knotMesh.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="linearAllocator.h" />
-    <ClInclude Include="planeMesh.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="utilities.h" />
@@ -174,11 +173,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bezierMesh.cpp" />
-    <ClCompile Include="cubeMesh.cpp" />
     <ClCompile Include="knotMesh.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="linearAllocator.cpp" />
-    <ClCompile Include="planeMesh.cpp" />
+    <ClCompile Include="shapeMesh.cpp" />
     <ClCompile Include="utilities.cpp" />
     <ClCompile Include="vulkanApp.cpp" />
     <ClCompile Include="winApp.cpp" />
