Implemented custom GraphicsPipeline object that is responsible for shader loading and enabling dynamic states

--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="shapeMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="graphicsPipeline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="shapeMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="graphicsPipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
