--- a/framework/framework.vcxproj
+++ b/framework/framework.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="alignedAllocator.h" />
     <ClInclude Include="application.h" />
     <ClInclude Include="bezierMesh.h" />
+    <ClInclude Include="graphicsPipeline.h" />
     <ClInclude Include="shapeMesh.h" />
     <ClInclude Include="spirvShaderFile.h" />
     <ClInclude Include="knotMesh.h" />
@@ -173,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bezierMesh.cpp" />
+    <ClCompile Include="graphicsPipeline.cpp" />
     <ClCompile Include="knotMesh.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="linearAllocator.cpp" />
