--- a/02-triangle/02-triangle.vcxproj
+++ b/02-triangle/02-triangle.vcxproj
@@ -57,7 +57,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{27a8fc58-1bb6-4e50-8c68-4c20736f1af5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Vulkan_Project1</RootNamespace>
+    <RootNamespace>_02_triangle</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>02-triangle</ProjectName>
   </PropertyGroup>
