--- a/10.a-render-to-texture/10.a-render-to-texture.vcxproj
+++ b/10.a-render-to-texture/10.a-render-to-texture.vcxproj
@@ -89,7 +89,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{9117A459-2834-4A10-820A-54934CBE1550}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>render_to_texture</RootNamespace>
+    <RootNamespace>_10a_render_to_texture</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>10.a-render-to-texture</ProjectName>
   </PropertyGroup>
