--- a/10.b-render-to-msaa-texture/10.b-render-to-msaa-texture.vcxproj
+++ b/10.b-render-to-msaa-texture/10.b-render-to-msaa-texture.vcxproj
@@ -89,7 +89,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{2DF25ACC-07D2-4E01-8007-B6D26F99F60A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>render_to_texture</RootNamespace>
+    <RootNamespace>_10b_render_to_msaa_texture</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>10.b-render-to-msaa-texture</ProjectName>
   </PropertyGroup>
