--- a/11-occlusion-query/11-occlusion-query.vcxproj
+++ b/11-occlusion-query/11-occlusion-query.vcxproj
@@ -57,7 +57,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{da85c030-1cf6-4121-88c4-ca056668acff}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>occlusion_query</RootNamespace>
+    <RootNamespace>_11_occlusion_query</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>11-occlusion-query</ProjectName>
   </PropertyGroup>
