Get rid of vertex buffer, generate position of full-screen quad in vertex shader

--- a/09-texture-volume/09-texture-volume.vcxproj
+++ b/09-texture-volume/09-texture-volume.vcxproj
@@ -34,7 +34,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(Filename).o</Outputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(Filename).o</Outputs>
     </CustomBuild>
-    <CustomBuild Include="passthrough.vert">
+    <CustomBuild Include="quad.vert">
       <FileType>Document</FileType>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(VK_SDK_PATH)\Bin32\glslangValidator.exe -V %(FullPath) -o %(Filename).o</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(VK_SDK_PATH)\Bin32\glslangValidator.exe -V %(FullPath) -o %(Filename).o</Command>
