Updated Magma submodule. Refactored descriptor set layouts. Updated namespace spelling.

--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="bufferFromArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shaderReflectionFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
