--- a/framework/framework.vcxproj
+++ b/framework/framework.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="linearAllocator.h" />
     <ClInclude Include="bufferFromArray.h" />
     <ClInclude Include="platform.h" />
+    <ClInclude Include="shaderReflectionFactory.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="utilities.h" />
     <ClInclude Include="vulkanApp.h" />
