Yse MultiThreadedDLL run-time library configuration to link with shaderc_combined.lib from Vulkan SDK

--- a/08-texture-cube/08-texture-cube.vcxproj
+++ b/08-texture-cube/08-texture-cube.vcxproj
@@ -192,7 +192,7 @@
       <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;..\third-party</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4100;4146;4305;4324;4458;4838;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <TreatWarningAsError>false</TreatWarningAsError>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
